style/search_style.css
@import './general_style.css';


/* ------------- HSMLP ---------------- */
.hsmlp-ctn {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  right: 0;
  background-color: #ccc;
  width: 20%;
  height: var(--header-heigth);
  padding: 1rem;
  border-radius: 10px;
  gap: .7rem;
  font-size: calc(var(--font-size) * 0.8);
  cursor: pointer;
  z-index: 100;
  background-color: var(--button-background);
  border: 2px solid #ddd;
  color: #ddd;
}

.hsmlp-ctn:hover {
  box-shadow: 0 0 8px 1px #ddd;
}

.hsmlp_logo {
  border-radius: 7px;
  padding: .2rem;
  flex-basis: 40%;
}

.hsmlp-ctn div img {
  max-width: 100%;
}

.hsmlp-ctn h3 span {
  color: var(--icon-button-fg);
}


/* ------------- HEADER ---------------- */
header {
  width: max-content;
  height: var(--header-heigth);
  position: absolute;
  left: 50%;
  transform: translate(-50%);
  display: flex;
  z-index: 100;
  width: 100%;
}

.header-container {
  padding-inline: 1rem;
  border-radius: 10px;
  background-color: #ddd;
  color: black;
  width: max-content;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-container img {
  max-width: 100%;
  max-height: 100%;
  padding: .3rem;
  margin-inline: 1rem;
}

header button {
  width: 100%;
  border: none;
  box-shadow: none;
  background-color: inherit;
  transition: 0.5s;
  color: transparent;
}

header button i {
  background-color: #222;
  color: var(--icon-button-fg);
  padding: 1rem;
  border-radius: 50%;
  font-size: calc(var(--font-size) * 2) !important;
}

header button i span {
  display: none;
}

header button i:hover .tooltip {
  display: block;
  position: absolute;
  left: 0;
  right: 0px;
  margin: auto;
  background-color: white;
  color: #000;
  border: 2px solid #888;
  width: max-content;
  padding: 4px;
  border-radius: 4px;
  transform: none;
}

/* --------------- MAIN -------------------- */

main {
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.form-ctn {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 2rem;
  padding: calc(var(--header-heigth) + 1rem) 2rem 2rem 2rem;
}

#formulario {
    flex-basis: 33%;
    margin: 0 auto;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: .7rem;
    box-shadow: 0 0 2px 3px #888;
    width: max-content;
    border-radius: 10px;
    padding: 1rem;
}

.years-ctn {
  display: flex;
  flex-direction: column;
  font-family: var(--font-family);
  color: var(--foreground-color);
  font-size: calc(var(--font-size) * 2);
  justify-content: left;
  align-items: start;
  gap: .3rem;
}

#year-input-ctn {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

#year-inputs-ctn {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: .4rem;
    padding: 0;
}

#year-inputs-ctn input[type="checkbox"] {
  display: none;
}

#year-inputs-ctn label {
  display: inline-block;
  padding: 5px;
  border: 1px solid #ccc;
  cursor: pointer;
  border-radius: 5px;
  font-size: calc(var(--font-size) * 1.5);
  background: #222;
}

input[type="checkbox"]:checked + label {
  background: var(--on-slide) !important;
  color: #fff;
  border-color: var(--on-slide);
}

.select-all-years-ctn {
    display: flex;
    align-items: center;
    gap: .4rem;
    color: var(--foreground-color);
}

.select-all-years-ctn h3 {
    font-size: calc(var(--font-size) * 1.3);
}

#search-ctn {
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: .5rem;
    position: relative;
    margin-top: 24px;
}

#search-input {
    width: 100%;
    font-weight: 700;
    font-size: calc(var(--font-size) * 1);
}

.error-message {
  display: none;
  color: white;
  font-size: calc(var(--font-size) * .9);
  position: absolute;
  top: -24px;
}

#matched-search-list {
  display: none;
  width: 100%;
  min-height: max-content;
  max-height: 50vh;
  flex-direction: column;
  align-items: start;
  justify-content: left;
  background-color: #333;
  color: #bbb;
  position: absolute;
  top: 4.7vh;
  box-shadow: 0 0 2px 2px #333;
  border-radius: 10px;
  overflow: auto;
  z-index: 200;
}

#search-ctn ul li {
  cursor: pointer;
  text-transform: uppercase;
  font-size: calc(var(--font-size) * 1);
  width: 100%; 
  text-align: left;
  padding: .5rem;
  font-weight: 600;
  border-top: 1px solid #222;
  
}

#search-ctn ul li p {
  font-size: calc(var(--font-size) * 0.9) !important;
  text-transform: uppercase !important;
}

/* #search-ctn ul li p span {
  font-size: calc(var(--font-size) * 0.7);
  text-transform: uppercase !important;
} */

#search-ctn ul li:hover, #search-ctn ul li:focus {
  background-color: #555;
}

#search-ctn ul li p {
  font-size: calc(var(--font-size) * 1.2);
  text-transform: lowercase;
  font-weight: 300;
}

.highligth {
  color: var(--on-slide);
  font-weight: 600;
}

.paths-ctn {
  flex-basis: 33%;
  height: 100%;
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: end;
  position: relative;
}

.paths-ctn form {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: start;
  overflow: auto;
  background-color: #eee;
  box-shadow: 0 0 2px 3px #333;
  border-radius: 10px;
  position: relative;
}

.paths-ctn form:empty::before {
  content: 'SIN especialidad y/o temas agregados';
  display: block;
  font-weight: 600;
  height: max-content;
  margin: auto;
  font-size: calc(var(--font-size) * 1.2);
}

.paths-ctn form .path-ctn input {
  display: none;
}

.path-ctn {
  width: 100%;
  text-align: left;
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 1px solid #000;
  animation-name: path-animation;
  animation-duration: 0.5s;
}

.paths-ctn form .path-ctn label {
  display: block;
  font-size: calc(var(--font-size) * 1.1);
  font-weight: 600;
  width: 100%;
  cursor: pointer;
  padding: 10px 5px;
  text-transform: uppercase;
}

.path-ctn i {
  width: 10%;
  font-size: calc(var(--font-size) * 2);
  text-align: center;
  color: var(--error-color);
  cursor: pointer;
}

.path-ctn i:hover {
  color: #555;
}

.path-ctn i:focus {
  color: #555;
}

@keyframes path-animation {
  0% {opacity: 0; transform: translateY(+100px);}
  100% {opacity: 1; transform: translateY(0px);}
}

.footer-buttons-ctn {
  flex-basis: 33%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1.5rem;
}

.all-q-counter-ctn {
  background: #222;
  padding: .7rem;
  border-radius: 10px;
  border: 2px solid var(--on-slide);
}

.all-q-counter-ctn h3 {
  font-size: calc(var(--font-size) * 1.3);
  color: #fff;
}

.search-cafecito-ctn {
  position: absolute;
  right: 10px;
  bottom: 10px;
  display: flex;
  align-items: center;
}

.search-cafecito-ctn img {
  width: max-content;
  height: max-content;
}

.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.switch input {
  display: none;
}

.slider {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  border-radius: 34px;
  cursor: pointer;
  transition: background-color 0.4s;
}

.slider::before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  border-radius: 50%;
  transition: transform 0.4s;
}

input:checked + .slider {
  background-color: var(--on-slide);
}

input:checked + .slider::before {
  transform: translateX(26px);
}

.switch:hover {
  background: inherit;
}

.random-switch-ctn {
    display: flex;
    gap: .3rem;
    align-items: center;
    color: var(--foreground-color);
}

.random-switch-ctn h3 {
    font-size: calc(var(--font-size) * 1.3);
    width: min-content;
}

.error-input {
    border: 2px solid #222;
    box-shadow: 0 0 2px 2px red;
}

.error-input ~ .error-message {
  display: block;
}

.modal-active {
    display: block !important;
}

.flex-active {
    display: flex !important;
}

.blue {
  color: var(--button-background);
}

@media (max-width: 767px) {
  .form-ctn {
    flex-direction: column;
    padding: calc(var(--header-heigth) + .5rem) .5rem .3rem .5rem;
    gap: 1rem;
  }

  #formulario {
    width: 100%;
  }

  .paths-ctn {
    min-height: 15rem;
  }

  .footer-buttons-ctn {
    flex-direction: row;
    gap: 1rem;
  }

  .hsmlp-ctn {
    position: relative;
    align-items: center;
    justify-content: center;
    padding: 0;
    border: none;
    width: 20%;
    height: max-content;
    overflow: hidden;
    margin: auto;
  }
  .hsmlp-ctn .hsmlp_logo {
    padding: 0;
    max-width: 100%;
    max-height: 100%;
  }
  .hsmlp-ctn .hsmlp_logo img {
  }
  .hsmlp-ctn h3 {
    display: none;
  }

}

